<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase3_ActividadesMasCheveres</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tipoDocumento">Tipo Documento</string>
    <string name="documento">Documento</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="genero">Sexo</string>
    <string name="gen_masculino">Masculino</string>
    <string name="gen_femenino">Femenino</string>
    <string name="estado">Activo</string>
    <string name="email">Correo</string>
    <string name="guardar">Guardar</string>
    
    <string name="radio">Radio</string>
    <string name="radio1">Opc 1</string>
    <string name="radio2">Opc 2</string>
    <string name="check">Check Box</string>
    <string name="newActivity">Nueva Actividad</string>
    
    <string name="contentImage">Imagen</string>
    

</resources>
