<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Spinner -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/spinner"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/layout_persona_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Spinner -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/layout_persona_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/layout_persona_radioButton1"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/radio1" />

            <RadioButton
                android:id="@+id/layout_persona_radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2" />
        </RadioGroup>
    </LinearLayout>

    <!-- CheckBox -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/layout_persona_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Linear layout para separa un poco -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="#DDDDDD"
        android:orientation="horizontal" >
    </LinearLayout>

    <!-- LINEAR LAYOUT CON BOTONES -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="getValueSpinner"
            android:text="@string/spinner" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="getValueRadio"
            android:text="@string/radio" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="getValueCheck"
            android:text="@string/check" />
    </LinearLayout>

    <!-- Linear layout para separa un poco -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="#DDDDDD"
        android:orientation="horizontal" >
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:stretchColumns="0,1,2" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="getValueSpinner"
                android:text="@string/spinner" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="getValueRadio"
                android:text="@string/radio" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="getValueCheck"
                android:text="@string/check" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="iniciarActividad"
                android:text="@string/newActivity" />
            
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="iniciarActividadExtras"
                android:text="@string/newActivity" />
            
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="iniciarActividadBundle"
                android:text="@string/newActivity" />
        </TableRow>
    </TableLayout>

</LinearLayout>